apps/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    app: backend
  annotations:
    external-dns.alpha.kubernetes.io/hostname: portal.k8tre.dev.umccr.org
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
