apps/backend/base/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: backend
spec:
  parentRefs:
  - name: internal-gateway
    namespace: gateway
  hostnames:
    - "portal.k8tre.${ENVIRONMENT}.${DOMAIN}"
  rules:
    - backendRefs:
        - name: portal
          namespace: backend
          port: 80
